more work on home page services

--- a/_assets/sass/base/elements/_body.scss
+++ b/_assets/sass/base/elements/_body.scss
@@ -141,11 +141,14 @@ body {
 			}
 		}
 
+		/*
 		.wp-block-image,
 		.wp-block-image.is-resized {
 			display: inline-block;
 			margin: 0;
 		}
+		*/
+
 	}
 
 	.home-service-list-desc,
