--- a/style.css
+++ b/style.css
@@ -1439,38 +1439,19 @@ h3.entry-title {
     margin: 0 auto;
     max-width: 69rem; }
     @media screen and (min-width: 600px) {
-      .services .services__content {
+      .services .services__content > .wp-block-group__inner-container {
         display: -ms-flexbox;
         display: flex;
         -ms-flex-direction: column;
             flex-direction: column; } }
-  .services .service {
-    width: 100%;
-    text-align: center; }
-    @media screen and (min-width: 900px) {
-      .services .service {
-        display: -ms-flexbox;
-        display: flex;
-        -ms-flex-align: center;
-            align-items: center;
-        text-align: left;
-        max-width: 28rem; } }
-    .services .service + .services .service {
-      margin-top: 3rem; }
-    @media screen and (min-width: 900px) {
-      .services .service {
-        margin-top: 0; }
-        .services .service .service:nth-child(even) {
-          -ms-flex-item-align: end;
-              align-self: flex-end; } }
   .services .service__image.wp-block-image {
     position: static;
     width: 100%;
-    max-width: 13.75rem;
+    max-width: 9.25rem;
     margin: 0 0 .5rem; }
     @media screen and (min-width: 600px) {
       .services .service__image.wp-block-image {
-        max-width: 9.25rem; } }
+        max-width: 13.75rem; } }
     @media screen and (min-width: 900px) {
       .services .service__image.wp-block-image {
         -ms-flex: 0 0 auto;
@@ -1482,7 +1463,7 @@ h3.entry-title {
       border-radius: 50%; }
   .services .service__title {
     font-size: 1.5rem;
-    margin-bottom: .25rem; }
+    margin: 0 0 .25rem; }
   .services .service__list {
     list-style-type: none;
     margin: 0 auto;
@@ -1491,9 +1472,36 @@ h3.entry-title {
     @media screen and (min-width: 900px) {
       .services .service__list {
         max-width: none;
-        font-size: 14px; }
-        .services .service__list li + li {
-          margin-top: 16px; } }
+        font-size: 14px;
+        /* li + li {
+				margin-top:16px;
+			} */ } }
+    .services .service__list li {
+      line-height: normal; }
+
+.service {
+  width: 100%;
+  text-align: center; }
+  @media screen and (min-width: 900px) {
+    .service {
+      text-align: left;
+      max-width: 28rem; } }
+  @media screen and (min-width: 900px) {
+    .service > .wp-block-group__inner-container {
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-align: center;
+          align-items: center;
+      text-align: left;
+      max-width: 100%; } }
+  .service + .service {
+    margin-top: 3rem; }
+  @media screen and (min-width: 900px) {
+    .service {
+      margin-top: 0; }
+      .service:nth-child(even) {
+        -ms-flex-item-align: end;
+            align-self: flex-end; } }
 
 #lets-work-together {
   background-color: #384f5b;
@@ -1614,6 +1622,7 @@ h3.entry-title {
   pointer-events: none;
   color: rgba(0, 0, 0, 0.15);
   font-size: 175px;
+  line-height: normal;
   font-weight: 700;
   font-style: italic;
   display: -ms-flexbox;
