--- a/_assets/sass/components/content/_posts-and-pages.scss
+++ b/_assets/sass/components/content/_posts-and-pages.scss
@@ -46,6 +46,7 @@
 
 	.home & {
 		margin: 80px 0 0;
+		overflow: clip;
 	}
 
 	h2 {
@@ -667,8 +668,17 @@ h3.entry-title {
 	text-align: center;
 
 	@media screen and (min-width: 900px) {
+		margin-top: 0;
 		text-align: left;
 		max-width: 28rem;
+
+		&:nth-child(even) {
+			align-self:flex-end;
+		}
+
+		&:nth-child(even) {
+			align-self:flex-end;
+		}
 	}
 
 	> .wp-block-group__inner-container {
@@ -676,20 +686,12 @@ h3.entry-title {
 			display: flex;
 			align-items: center;
 			text-align: left;
-			max-width: 100%;
+			// max-width: 100%;
 		}
 	}
 
 	& + & {
 		margin-top: 3rem;
-	}
-
-	@media screen and (min-width: 900px) {
-		margin-top: 0;
-
-		&:nth-child(even) {
-			align-self:flex-end;
-		}
 	}
 }
 
