--- a/_assets/sass/plugins/_testimonial-rotator.scss
+++ b/_assets/sass/plugins/_testimonial-rotator.scss
@@ -1,7 +1,11 @@
 .testimonial_rotator_wrap {
 	max-width: 42rem;
-	margin: 4.5rem auto 1.5rem;
+	margin: 1.5rem auto 1.5rem;
 	padding: 0 10px;
+
+	@media screen and (min-width: 900px) {
+		margin-top: 4.5rem;
+	}
 
 	.slide {
 		padding: 0 4.5rem;
